# dicta

./: .gitignore  .prettierignore  CHANGELOG.md  Makefile  README.md  TODOS.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  toast.html  vite.config.ts  voice-input.html
.claude/agents/: tauri-macos-app-builder.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
scripts/: release.sh  rename-app.sh
src/: app.tsx  index.css  main.tsx  toast.tsx  voice-input-window.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  voice-input.json
src-tauri/src/: audio_devices.rs  clipboard_utils.rs  lib.rs  main.rs  menu.rs  secure_storage.rs  shortcut_utils.rs  shortcuts.rs  window.rs
src-tauri/src/commands/: logs.rs  mod.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/ai_processing/: mod.rs  providers.rs
src-tauri/src/features/audio/: commands.rs  devices.rs  mod.rs  player.rs  recorder.rs  state.rs
src-tauri/src/features/clipboard/: mod.rs
src-tauri/src/features/data/: mod.rs
src-tauri/src/features/models/: local_model_commands.rs  local_model_downloader.rs  local_model_manager.rs  mod.rs  models_registry.rs  startup.rs
src-tauri/src/features/models/engines/: mod.rs  whisper.rs
src-tauri/src/features/recordings/: metadata.rs  mod.rs  storage.rs
src-tauri/src/features/shortcuts/: manager.rs  mod.rs  recording_handler.rs  utils.rs
src-tauri/src/features/transcription/: mod.rs  orchestrator.rs  orchestrator_helpers.rs
src-tauri/src/features/transcription/providers/: google.rs  local_whisper.rs  mod.rs  openai.rs
src-tauri/src/features/window/: mod.rs  pill_window.rs  toast_window.rs
src-tauri/src/models/: local_model_commands.rs  mod.rs  models_registry.rs  whisper_download.rs  whisper_manager.rs
src-tauri/src/transcription/: apple_speech.rs  elevenlabs_transcription.rs  google_transcription.rs  local_whisper.rs  mod.rs  openai_transcription.rs  orchestrator.rs  whisper_lifecycle.rs
src-tauri/src/types/: settings.rs
src-tauri/src/utils/: app_categorization.rs  haptic.rs  logger.rs  mod.rs
src/components/: app-layout.tsx  app-sidebar.tsx  dicta-version.tsx  protected-route.tsx
src/components/ui/: audio-player.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  copy-button.tsx  dialog.tsx  dicta-logo.tsx  dropdown-menu.tsx  info-card.tsx  input.tsx  label.tsx  live-waveform.tsx  microphone-illustration.tsx  progress.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  tooltip.tsx  waveform.tsx
src/config/: index.ts  types.ts
src/features/help/: index.ts
src/features/home/: home.tsx  index.ts
src/features/models/: index.ts  model-capabilities.ts  provider-info.tsx  store.ts  types.ts
src/features/onboarding/: index.ts  onboarding.tsx  store.ts  types.ts
src/features/settings/: index.ts  schema.ts  store.ts  types.ts
src/features/snippets/: index.ts  schema.ts  store.ts  types.ts
src/features/styles/: index.ts
src/features/transcriptions/: index.ts  schema.ts  store.ts  types.ts
src/features/vibes/: index.ts  schema.ts  store.ts  types.ts
src/features/vocabulary/: index.ts  schema.ts  store.ts  types.ts
src/features/voice-input/: index.ts  voice-input-window.tsx
src/hooks/: use-audio-devices.ts  use-audio-recording.ts  use-microphone-device-sync.ts  use-permissions.ts  use-tauri-event.ts
src/lib/: microphone-permissions.ts  permissions.ts
src/providers/: theme-provider.tsx
src/schemas/: stores.ts
src/utils/: data-export.ts  validation.ts
website/: package-lock.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/changelog/: page.tsx
website/app/privacy-policy/: page.tsx
website/app/roadmap/: page.tsx
website/app/terms-of-service/: page.tsx
website/components/: Navbar.tsx
website/components/sections/: FAQ.tsx  Features.tsx  Footer.tsx  (+5 more)
(+115 files in other folders)
