[package]
name = "dicta"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "dicta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dicta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [
    "macos-private-api",
    "tray-icon",
    "devtools",
] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["serde-compat"] }
tauri-plugin-notification = "2.2.1"
tauri-plugin-store = "2.1.0"
tauri-plugin-stronghold = "2.2.0"
thiserror = "2.0.17"
window-vibrancy = "0.7.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-mic-recorder = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2.3.3"
reqwest = { version = "0.13.1", features = ["multipart", "json", "stream"] }
base64 = "0.22.1"
uuid = { version = "1.19.0", features = ["v4"] }
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["fs"] }
bytes = "1.11.0"
whisper-rs = "0.15.1"
hound = "3.5"
aes-gcm = "0.10"
zip = "2.2.2"
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4"
objc2-app-kit = "0.3.2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
cpal = "0.17.1"
tempfile = "3.24.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2.7"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-updater = "^2.7.1"

# [[bin]]
# name = "generate_schema"
# path = "src/bin/generate_schema.rs"
